more chapters layout

--- a/AsciiDoc/11_petclinic_focusonlayout.adoc
+++ b/AsciiDoc/11_petclinic_focusonlayout.adoc
@@ -10,5 +10,6 @@
 '''
 
 
+
 '''
-link:10_petclinic_addactions.adoc[<< BACK] | link:12_petclinic_.adoc[NEXT >>]
+link:10_petclinic_addactions.adoc[<< BACK] | link:12_petclinic_createhomepage.adoc[NEXT >>]
